# gitahead

./: .gitmodules
dep/: CMakeLists.txt
dep/gpgme/: CMakeLists.txt
src/git/: CMakeLists.txt  GpgmeWrapper.cpp  GpgmeWrapper.h  Repository.cpp
